...
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/grey"/>

                    <Button
                        android:layout_width="match_parent"
                        android:text="GO TO WEGWEISER APP"
                        android:id="@+id/wegweiserButton"
                        android:textColor="@android:color/white"
                        android:background="@color/colorPrimary"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

...
