<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/location_item"
        android:icon="@drawable/ic_explore_white_24dp"
        android:title="Overview" />
    <item
        android:id="@+id/favorite_item"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="Indoor Navigation" />
</menu>