...
                    android:layout_width="match_parent"
                    android:text="Select your Indoornavigation manually"
                    android:padding="16dp"
                    android:layout_height="wrap_content"/>

                <unima.campus_navigation.util.CustomSpinner
                    android:id="@+id/indoorspinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    >

                </unima.campus_navigation.util.CustomSpinner>
...
